added autoplay audio on page load

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
+        <nav><ul><a href="index.html"><li>Home</li></a></ul></nav>
         <h1 class="title">Phantom Forces Weapon Wheels</h1>
         <center>
+            <div class="wheeldisclaimer">
+                <p>READ RULES BELOW BEFORE USING THE WEAPON WHEELS</p>
+                <audio autoplay>
+                    <source src="rules.mp3" type="audio/mpeg">
+                  </audio>
+            </div>
             <div class="wheels">
         <!--Wheel 1-->
         <p2 class="wheeldescription">Primary</p2>
@@ -14,9 +21,7 @@
         <p2 class="wheeldescription">Secondary</p2>
         <iframe src="https://wheeldecide.com/e.php?c1=M9&c2=GLOCK+17&c3=M1911&c4=DEAGLE&c5=M45A1&c6=FIVE+SEVEN&c7=ZIP+22&c8=GLOCK+18&c9=M93R&c10=TEC-9&c11=MP1911&c12=MP412+REX&c13=MATEBA+6&c14=1858+NEW+ARMY&c15=RED+HAWK+44&c16=SERBU+SHOTGUN&c17=SFG+50&c18=SAWED+OFF&c19=SAIGA-12U&c20=OBREZ&c21=Grenade+&c22=JUDGE+&c23=EXECUTIONER+&c24=Deagle+XIX+&c25=EXECUTIONER+&col=rou&t=PHANTOM+FORCES+SECONDARIES&time=5" width="500" height="500" scrolling="no" frameborder="0"></iframe>
         </div>
-        <div class="wheeldisclaimer">
-            <p>IF WHEELS ARE INVISIBLE, SWITCH TO MEMBERS AND BACK TO  HOME</p>
-        </div>
+
     </center>
     <div class="rules">
         <p>RULES
