--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
             </ol>
             </p>
         </div>
-        <p class="sitedisclaimer"><a href="adsnipers.rf.gd">Redesign By: Adsnipers</a></p>
+        <p class="sitedisclaimer"><a href="adsnipers.rf.gd" style="text-decoration: none; color: white;">Redesign By: Adsnipers</a></p>
     </body>
 </html>
