--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
             </ol>
             </p>
         </div>
-        <p class="sitedisclaimer"><a href="https://adsnipers.rf.gd" style="text-decoration: none; color: white;">Redesign By: Adsnipers</a></p>
+        <p class="sitedisclaimer"><a href="http://adsnipers.rf.gd" style="text-decoration: none; color: white;">Redesign By: Adsnipers</a></p>
     </body>
 </html>
