--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <h1 class="title">Phantom Forces Weapon Wheels</h1>
         <center>
             <div class="wheeldisclaimer">
-                <p>PLEASE READ RULES BELOW BEFORE USING THE WEAPON WHEELS</p>
+                <p>READ RULES BELOW BEFORE USING THE WEAPON WHEELS</p>
                 <audio autoplay>
                     <source src="rules.mp3" type="audio/mpeg">
                   </audio>
